# elo-memory

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MCP_SETUP.md  README.md  USAGE_GUIDE.md  brain.py  mcp_server.py  mcp_server_async.py  memory_server.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  tests.yml
benchmarks/: bench_retrieval.py
examples/: complete_system.py  full_demo.py  quickstart.ipynb
src/elo_memory/: __init__.py  auditor.py  brain.py  causal_engine.py  cli.py  evolution.py  governor.py  memory_server.py  online_learning.py  utils.py  world_simulator.py
src/elo_memory/consolidation/: __init__.py  dream_cycle.py  memory_consolidation.py
src/elo_memory/federation/: __init__.py  privacy.py  symbiosis.py
src/elo_memory/memory/: __init__.py  entity_extractor.py  episodic_store.py  forgetting.py  intelligence.py  interference.py  knowledge_base.py  user_memory.py
src/elo_memory/retrieval/: __init__.py  prefetcher.py  two_stage_retriever.py
src/elo_memory/segmentation/: __init__.py  event_segmenter.py
src/elo_memory/surprise/: __init__.py  bayesian_surprise.py
tests/: test_advanced_modules.py  test_brain.py  test_consolidation.py  test_entity_extractor.py  test_episodic_store.py  test_event_segmenter.py  test_forgetting.py  test_interference.py  test_knowledge_base.py  test_mcp_server.py  test_memory.py  test_online_learning.py  test_stress.py  test_surprise.py  test_two_stage_retriever.py  test_user_memory.py
