[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elo-memory"
version = "0.2.3"
description = "Bio-inspired episodic memory system for AI agents"
readme = "README.md"
license = {text = "BSL-1.1"}
requires-python = ">=3.10"
authors = [
    {name = "Lorenc Ndoj"},
    {name = "Elvi Zekaj"}
]
keywords = [
    "memory",
    "ai",
    "llm",
    "episodic-memory",
    "bayesian-surprise",
    "event-segmentation",
    "neuroscience",
    "chromadb",
    "retrieval"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.21.0",
    "chromadb>=0.4.0",
    "hmmlearn>=0.3.0",
    "networkx>=2.6",
    "scikit-learn>=1.0",
    "sentence-transformers>=2.2.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=1.0",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0",
]
all = [
    "elo-memory[dev,api]",
]

[project.urls]
Homepage = "https://github.com/server-elo/elo-memory"
Documentation = "https://github.com/server-elo/elo-memory#readme"
Repository = "https://github.com/server-elo/elo-memory.git"
"Bug Tracker" = "https://github.com/server-elo/elo-memory/issues"

[project.scripts]
elo-memory = "elo_memory.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
elo_memory = ["py.typed"]
"*" = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/elo_memory"]
omit = ["src/elo_memory/cli.py"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.",
    "pragma: no cover",
]